Coraid ssh2 support + qid fixes (Thanks Steve Simon)

--- a/README
+++ b/README
@@ -1,20 +1,9 @@
-CONTACT
-
-	Fazlul Shahriar <fshahriar@gmail.com>
-
-
-Installing OpenSSH (if ssh1 doesn't work)
-
-	# if you don't have the contrib tools
- 	/n/sources/contrib/fgb/root/rc/bin/contrib/install fgb/contrib
- 	
-	contrib/install fgb/openssl
-	contrib/install fgb/openssh
-
+AUTHOR		Fazlul Shahriar <fshahriar@gmail.com>
 
 BUGS
-
 	openssh server bugs:
-	
-	READDIR gives 0 entries if the directory has no executable permission,
-	but is readable.
+		READDIR gives 0 entries if the directory has no executable permission,
+		but is readable.
+
+Small changes for ssh2 by Steve Simon, Apr 2012.
+
